create general styles, header and footer #5

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>T-Shirt Planning Poker - Lemoncode</title>
-
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
