--- a/front/src/index.html
+++ b/front/src/index.html
@@ -12,7 +12,6 @@
     />
   </head>
   <body>
-    <h1>hola mundo</h1>
-    <script src="./index.ts"></script>
+    <div id="root"></div>
   </body>
 </html>
