--- a/front/static/index.html
+++ b/front/static/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="component"></div>
     <div class="component">
-      <a href="http://localhost:8080/app/">GET STARTED</a>
+      <a href="http://localhost:8080/app.html">GET STARTED</a>
     </div>
     <footer class="footer">
       <img
