--- a/front/static/index.html
+++ b/front/static/index.html
@@ -16,26 +16,35 @@
   </head>
   <body>
     <div class="background"></div>
+
     <div class="container">
-      <div class="component">
-        <header class="logo">
-          <img class="img-logo" src="./assets/logo.png" alt="logo T-Shirt" />
-          <h1 class="txt-logo">T-Shirt Planning Poker</h1>
-        </header>
+      <div class="component header-container">
+        <div class="component">
+          <header class="logo">
+            <img class="img-logo" src="./assets/logo.png" alt="logo T-Shirt" />
+            <h1 class="txt-logo">T-Shirt Planning Poker</h1>
+          </header>
+        </div>
+        <div class="component">
+          <p class="txt">
+            Using T-Shirt sizes in our Scrum poker session, allows us to remove
+            analisys paralysis and reach consensus estimate.
+          </p>
+        </div>
+        <div class="component button-top">
+          <button
+            class="button"
+            onclick="location.href='app.html'"
+            type="button"
+          >
+            get started
+          </button>
+        </div>
       </div>
       <div class="component">
-        <h2 class="title">T-Shirt Planning Poker is a free online tool</h2>
-      </div>
-      <div class="component button-top">
-        <button class="button" onclick="location.href='app.html'" type="button">
-          get started
-        </button>
-      </div>
-      <div class="component">
-        <p class="txt">
-          Using T-Shirt sizes in our Scrum poker session, allows us to remove
-          analisys parallisis and build consensus estimates.
-        </p>
+        <h2 class="title">
+          T-Shirt Planning Poker is a free online tool. <br />How does it work?
+        </h2>
       </div>
       <div class="component video-container">
         <video
@@ -51,14 +60,16 @@
             </li>
             <li class="item-list">
               A session link will be generated, copy it and share it with the
-              rest of attendees.
+              rest of the attendees.
             </li>
             <li class="item-list">
-              Create your story and hit hte start voting button.
+              Create your story and hit the start voting button.
             </li>
             <li class="item-list">Attendees will emit their votes.</li>
             <li class="item-list">
-              Once all attendees has voted, click on finish voting and results
+              Once all attendees have voted, click on finish voting and results
+              will be shown... Create a new story to start the voting process
+              again.
             </li>
           </ol>
         </div>
@@ -70,10 +81,12 @@
       </div>
     </div>
     <footer class="footer">
-      <img class="imgFooter" src="./assets/logo-lemon.png" alt="lemoncode" />
+      <a class="imgFooter" href="https://lemoncode.net/" target="blank">
+        <img class="imgFooter" src="./assets/logo-lemon.png" alt="lemoncode" />
+      </a>
       <ul class="menuFooter">
         <li class="itemMenuFooter">
-          <a href="about.html" class="linkMenuFooter">About</a>
+          <a href="about.html" class="linkMenuFooter">About us</a>
         </li>
         <li class="itemMenuFooter">
           <a href="about.html" class="linkMenuFooter">License</a>
