updated some wording

--- a/landing-comming-soon/index.html
+++ b/landing-comming-soon/index.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>T-Shirt Planning Poker - Lemoncode</title>
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="./styles.css" />
-	</head>
-	<body>
-		<div class="background"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>T-Shirt Planning Poker - Lemoncode</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div class="background"></div>
 
-		<div class="container">
-			<div class="component header-container">
-				<div class="component">
-					<header class="logo">
-						<img class="img-logo" src="./assets/logo.png" alt="logo T-Shirt" />
-						<h1 class="txt-logo">T-Shirt Planning Poker</h1>
-					</header>
-				</div>
-				<div class="component">
-					<p class="txt">
-						Using T-Shirt sizes in our Scrum poker session, allows us to remove
-						analisys paralysis and reach consensus estimate.
-					</p>
-				</div>
-			</div>
-			<div class="component center">
-				<h1 class="title comming">Comming soon!!</h1>
-				<h2 class="title">T-Shirt Planning Poker is a free online tool.</h2>
-			</div>
-			<div class="footer footer2">
-				<h2 class="title title2">T-Shirt Planning Poker is a creation of</h2>
-				<img
-					class="imgFooter imgFooter2"
-					src="./assets/logo-lemon.png"
-					alt="logo Lemoncode"
-				/>
-			</div>
-		</div>
-		<div class="footer">
-			<h2 class="title titleFooter">T-Shirt Planning Poker is a creation of</h2>
-			<img
-				class="imgFooter"
-				src="./assets/logo-lemon.png"
-				alt="logo Lemoncode"
-			/>
-		</div>
-	</body>
+    <div class="container">
+      <div class="component header-container">
+        <div class="component">
+          <header class="logo">
+            <img class="img-logo" src="./assets/logo.png" alt="logo T-Shirt" />
+            <h1 class="txt-logo">T-Shirt Planning Poker</h1>
+          </header>
+        </div>
+        <div class="component">
+          <p class="txt">
+            Using T-Shirt sizes in our Scrum poker session, allows us to remove
+            analisys paralysis and reach consensus estimate.
+          </p>
+        </div>
+      </div>
+      <div class="component center">
+        <h1 class="title coming">Coming soon!!</h1>
+        <h2 class="title">T-Shirt Planning Poker is a free online tool.</h2>
+      </div>
+      <div class="footer footer2">
+        <h2 class="title title2">
+          Developed by Máster Front End Lemoncode students
+        </h2>
+        <img
+          class="imgFooter imgFooter2"
+          src="./assets/logo-lemon.png"
+          alt="logo Lemoncode"
+        />
+      </div>
+    </div>
+    <div class="footer">
+      <h2 class="title titleFooter">
+        Developed by Master Front End Lemoncode students
+      </h2>
+      <img
+        class="imgFooter"
+        src="./assets/logo-lemon.png"
+        alt="logo Lemoncode"
+      />
+    </div>
+  </body>
 </html>
