--- a/front/static/index.html
+++ b/front/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>T-Shirt Planning Poker - Lemoncode</title>
+    <title>Welcome Page - T-Shirt Planning Poker - Lemoncode</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
