added new info about and added beta to info

--- a/front/static/about.html
+++ b/front/static/about.html
@@ -50,54 +50,67 @@
       <h1 class="title">Credits</h1>
       <div class="component card-container">
         <div class="card">
-          <img class="avatar" src="./assets/avatar.png" alt="user" />
+          <img
+            class="avatar"
+            src="./assets/braulio-diez.png"
+            alt="braulio díez"
+          />
 
           <div class="info-user">
-            <h4 class="name-card">John Doe</h4>
+            <h4 class="name-card">Braulio Díez</h4>
             <p class="txt-card">
-              Lorem ipsum dolor sit amet, consectetuer. Lorem ipsum dolor sit
-              amet, consectetuer. Lorem ipsum dolor sit amet, consectetuer.
-              Lorem ipsum dolor. Lorem ipsum dolor sit amet, consectetuer. Lorem
-              ipsum dolor sit amet, consectetuer. Lorem ipsum dolor sit amet,
-              consectetuer. Lorem ipsum dolor
+              JavaScript / Typescript developer (old hand coming from .net
+              background), trainer, writter and speaker. More than 20 years
+              involved on international projects.
             </p>
           </div>
         </div>
         <div class="card">
-          <img class="avatar" src="./assets/avatar.png" alt="user" />
+          <img
+            class="avatar"
+            src="./assets/daniel-sanchez.png"
+            alt="daniel sánchez"
+          />
 
           <div class="info-user">
-            <h4 class="name-card">Marie Curie</h4>
+            <h4 class="name-card">Daniel Sánchez</h4>
             <p class="txt-card">
-              Lorem ipsum dolor sit amet, consectetuer. Lorem ipsum dolor sit
-              amet, consectetuer. Lorem ipsum dolor sit amet, consectetuer.
-              Lorem ipsum dolor
+              Technical Telecommunications Engineer, Master's Degree in Web
+              Engineering (RIAtec) at the University of Málaga, Front-End
+              (React) senior developer.
             </p>
           </div>
         </div>
         <div class="card">
-          <img class="avatar" src="./assets/avatar.png" alt="user" />
+          <img
+            class="avatar"
+            src="./assets/juan-pablo.jpg"
+            alt="juan pablo martínez"
+          />
 
           <div class="info-user">
-            <h4 class="name-card">John Doe</h4>
+            <h4 class="name-card">Juan Pablo Martínez</h4>
             <p class="txt-card">
-              Lorem ipsum dolor sit amet, consectetuer. Lorem ipsum dolor sit
-              amet, consectetuer. Lorem ipsum dolor sit amet, consectetuer.
-              Lorem ipsum dolor. Lorem ipsum dolor sit amet, consectetuer. Lorem
-              ipsum dolor sit amet, consectetuer. Lorem ipsum dolor sit amet,
-              consectetuer. Lorem ipsum dolor
+              Front-End developer, ui/ux designer and Lemoncoder. Guitarist and
+              heavy metal singer in my free time \m/.
             </p>
           </div>
         </div>
         <div class="card">
-          <img class="avatar" src="./assets/avatar.png" alt="user" />
+          <img
+            class="avatar"
+            src="./assets/miguel-angel-vazquez.jpg"
+            alt="miguel ángel vezquez"
+          />
 
           <div class="info-user">
-            <h4 class="name-card">Marie Curie</h4>
+            <h4 class="name-card">Miguel Ángel Vázquez Vera</h4>
             <p class="txt-card">
-              Lorem ipsum dolor sit amet, consectetuer. Lorem ipsum dolor sit
-              amet, consectetuer. Lorem ipsum dolor sit amet, consectetuer.
-              Lorem ipsum dolor
+              With an extensive career in artistic production and academic
+              research, in 2019 he decided to retrain as a web developer. After
+              finishing the Front-end master from Lemoncode, he participated in
+              some open source projects. Currently, he is working as a front-end
+              developer.
             </p>
           </div>
         </div>
