--- a/front/static/index.html
+++ b/front/static/index.html
@@ -22,7 +22,10 @@
         <div class="component">
           <header class="logo">
             <img class="img-logo" src="./assets/logo.png" alt="logo T-Shirt" />
-            <h1 class="txt-logo">T-Shirt Planning Poker</h1>
+            <h1 class="txt-logo">
+              T-Shirt Planning Poker
+              <span class="title">(Beta)</span>
+            </h1>
           </header>
         </div>
         <div class="component">
