--- a/front/static/about.html
+++ b/front/static/about.html
@@ -53,7 +53,7 @@
           <img
             class="avatar"
             src="./assets/braulio-diez.png"
-            alt="braulio díez"
+            alt="Braulio Díez"
           />
 
           <div class="info-user">
@@ -69,7 +69,7 @@
           <img
             class="avatar"
             src="./assets/daniel-sanchez.png"
-            alt="daniel sánchez"
+            alt="Daniel Sánchez"
           />
 
           <div class="info-user">
@@ -85,7 +85,7 @@
           <img
             class="avatar"
             src="./assets/juan-pablo.jpg"
-            alt="juan pablo martínez"
+            alt="Juan Pablo Martínez"
           />
 
           <div class="info-user">
@@ -100,17 +100,34 @@
           <img
             class="avatar"
             src="./assets/miguel-angel-vazquez.jpg"
-            alt="miguel ángel vezquez"
+            alt="Miguel Ángel Vazquez"
           />
 
           <div class="info-user">
-            <h4 class="name-card">Miguel Ángel Vázquez Vera</h4>
+            <h4 class="name-card">Miguel Ángel Vázquez</h4>
             <p class="txt-card">
               With an extensive career in artistic production and academic
               research, in 2019 he decided to retrain as a web developer. After
               finishing the Front-end master from Lemoncode, he participated in
               some open source projects. Currently, he is working as a front-end
               developer.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="avatar"
+            src="./assets/luis-del-amo.jpg"
+            alt="Luís del Amo"
+          />
+
+          <div class="info-user">
+            <h4 class="name-card">Luís del Amo</h4>
+            <p class="txt-card">
+              My name is Luis, Full Stack developer in Luxembourg🇱🇺. I love
+              coding and learning (focus on my weaknesses UX and UI. It's really
+              difficult to develop thinking if my mum could do it). When it's
+              possible in my free time I love surfing and snowboarding.
             </p>
           </div>
         </div>
