add miguel angel romero

--- a/front/static/about.html
+++ b/front/static/about.html
@@ -131,6 +131,25 @@
             </p>
           </div>
         </div>
+        <div class="card">
+          <img
+            class="avatar"
+            src="./assets/miguel-angel-romero.jpg"
+            alt="Miguel Ángel Romero"
+          />
+
+          <div class="info-user">
+            <h4 class="name-card">Miguel Ángel Romero</h4>
+            <p class="txt-card">
+              After a professional evolution from Java developer in banking
+              environments to management tasks, a few years ago I decided to
+              continue my professional life doing what I like the most,
+              programming. After a recycling through a Master in Frontend, I am
+              currently passionate about React and Javascript world, especially
+              the pure "backend" code aspects.
+            </p>
+          </div>
+        </div>
       </div>
       <h1 class="title">License</h1>
       <div class="component">
