--- a/front/static/index.html
+++ b/front/static/index.html
@@ -50,11 +50,7 @@
         </h2>
       </div>
       <div class="component video-container">
-        <video
-          class="video"
-          src="http://v2v.cc/~j/theora_testsuite/320x240.ogg"
-          controls
-        ></video>
+        <video class="video" src="./assets/planning.mp4" controls></video>
         <div class="txt list">
           <h4 class="header-list">Get Started in five simple steps:</h4>
           <ol class="body-list">
