--- a/front/static/index.html
+++ b/front/static/index.html
@@ -55,7 +55,7 @@
           <h4 class="header-list">Get Started in five simple steps:</h4>
           <ol class="body-list">
             <li class="item-list">
-              Choose a name for the ‘master’ player and hit on create session.
+              Choose a name for the ‘master’ player and hit create session.
             </li>
             <li class="item-list">
               A session link will be generated, copy it and share it with the
