add new info alberto

--- a/front/static/about.html
+++ b/front/static/about.html
@@ -71,6 +71,22 @@
         <div class="card">
           <img
             class="avatar"
+            src="./assets/alberto-caparros.jpg"
+            alt="Alberto Caparrós Trigo"
+          />
+
+          <div class="info-user">
+            <h4 class="name-card">Alberto Caparrós Trigo</h4>
+            <p class="txt-card">
+              Software developer - Frontend, Backend and Mobile Apps from
+              Almería, Spain. I love to live different experiences all around
+              the world and learn all I can about coding.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="avatar"
             src="./assets/juan-pablo.jpg"
             alt="Juan Pablo Martínez"
           />
