--- a/front/static/about.html
+++ b/front/static/about.html
@@ -52,50 +52,32 @@
         <div class="card">
           <img
             class="avatar"
-            src="./assets/alicia-ga.png"
-            alt="Alicia Guardeño Albertos"
-          />
-
-          <div class="info-user">
-            <h4 class="name-card">Alicia Guardeño Albertos</h4>
-            <p class="txt-card">
-              Disabled software engineer 👩‍🦼 living in south Spain. ☀️ Now
-              Frontend React developer looking for work in a 100% remote
-              friendly company that supports open source sustainability. 🙌
-              Previously worked on game development as a 2D generic/pixel
-              artist, 🖌️ and mostly C# & unity programmer in indie games. 🎮 I'm
-              a huge nerd/geek, Pokemon TCG player, and D&D5 DM. 🤓
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            class="avatar"
-            src="./assets/alberto-caparros.jpg"
-            alt="Alberto Caparrós Trigo"
-          />
-
-          <div class="info-user">
-            <h4 class="name-card">Alberto Caparrós Trigo</h4>
-            <p class="txt-card">
-              Software developer - Frontend, Backend and Mobile Apps from
-              Almería, Spain. I love to live different experiences all around
-              the world and learn all I can about coding.
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            class="avatar"
             src="./assets/juan-pablo.jpg"
             alt="Juan Pablo Martínez"
           />
-
           <div class="info-user">
             <h4 class="name-card">Juan Pablo Martínez</h4>
             <p class="txt-card">
               Front-End developer, ui/ux designer and Lemoncoder. Guitarist and
-              heavy metal singer in my free time \m/.
+              heavy metal singer in my free time &#x1f918;
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="avatar"
+            src="./assets/miguel-angel-vazquez.jpg"
+            alt="Miguel Ángel Vazquez"
+          />
+
+          <div class="info-user">
+            <h4 class="name-card">Miguel Ángel Vázquez</h4>
+            <p class="txt-card">
+              With an extensive career in artistic production and academic
+              research, in 2019 he decided to retrain as a web developer. After
+              finishing the Front-end master from Lemoncode, he participated in
+              some open source projects. Currently, he is working as a front-end
+              developer.
             </p>
           </div>
         </div>
@@ -118,6 +100,41 @@
         <div class="card">
           <img
             class="avatar"
+            src="./assets/alberto-caparros.jpg"
+            alt="Alberto Caparrós Trigo"
+          />
+
+          <div class="info-user">
+            <h4 class="name-card">Alberto Caparrós Trigo</h4>
+            <p class="txt-card">
+              Software developer - Frontend, Backend and Mobile Apps from
+              Almería, Spain. I love to live different experiences all around
+              the world and learn all I can about coding.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="avatar"
+            src="./assets/alicia-ga.png"
+            alt="Alicia Guardeño Albertos"
+          />
+
+          <div class="info-user">
+            <h4 class="name-card">Alicia Guardeño Albertos</h4>
+            <p class="txt-card">
+              Disabled software engineer 👩‍🦼 living in south Spain. ☀️ Now
+              Frontend React developer looking for work in a 100% remote
+              friendly company that supports open source sustainability. 🙌
+              Previously worked on game development as a 2D generic/pixel
+              artist, 🖌️ and mostly C# & unity programmer in indie games. 🎮 I'm
+              a huge nerd/geek, Pokemon TCG player, and D&D5 DM. 🤓
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="avatar"
             src="./assets/miguel-angel-romero.jpg"
             alt="Miguel Ángel Romero"
           />
@@ -130,24 +147,6 @@
               programming. After a recycling through a Master in Frontend, I am
               currently passionate about React and Javascript world, especially
               the pure "backend" code aspects.
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            class="avatar"
-            src="./assets/miguel-angel-vazquez.jpg"
-            alt="Miguel Ángel Vazquez"
-          />
-
-          <div class="info-user">
-            <h4 class="name-card">Miguel Ángel Vázquez</h4>
-            <p class="txt-card">
-              With an extensive career in artistic production and academic
-              research, in 2019 he decided to retrain as a web developer. After
-              finishing the Front-end master from Lemoncode, he participated in
-              some open source projects. Currently, he is working as a front-end
-              developer.
             </p>
           </div>
         </div>
