--- a/front/static/about.html
+++ b/front/static/about.html
@@ -196,6 +196,29 @@
             </p>
           </div>
         </div>
+        <div class="card">
+          <img
+            class="avatar"
+            src="./assets/juan-jose-montiel.png"
+            alt="Juan José Montiel"
+          />
+
+          <div class="info-user">
+            <h4 class="name-card">Juan José Montiel</h4>
+            <p class="txt-card">
+              Senior software engineer and Microsoft Accessibility MVP. I've
+              been fighting and having fun with technology for over thirteen
+              years. My goal? Making technology more accessible every day... and
+              learning, always learning something new. Specialized in .NET, I am
+              passionate about developing and making applications that improve
+              the daily lives of people like me, we have a different way of
+              accessing information. Proud husband and father of an adorable
+              six-year-old boy. I love music = (I'm a pianist but with the PC
+              keys I don't have much time left for that = hobby), and a lover of
+              literature.
+            </p>
+          </div>
+        </div>
       </div>
       <h1 class="title">License</h1>
       <div class="component">
