fix from point 1 to 9

--- a/front/static/index.html
+++ b/front/static/index.html
@@ -32,15 +32,15 @@
     <div class="background"></div>
 
     <div class="container">
-      <div class="component header-container">
+      <header class="component header-container">
         <div class="component">
-          <header class="logo">
+          <div class="logo">
             <img class="img-logo" src="./assets/logo.png" alt="logo T-Shirt" />
             <h1 class="txt-logo">
               T-Shirt Planning Poker
               <span class="title">(Beta)</span>
             </h1>
-          </header>
+          </div>
         </div>
         <div class="component">
           <p class="txt">
@@ -57,41 +57,48 @@
             get started
           </button>
         </div>
-      </div>
-      <div class="component">
-        <h2 class="title">
-          T-Shirt Planning Poker is a free online tool. <br />How does it work?
-        </h2>
-      </div>
-      <div class="component video-container">
-        <video class="video" src="./assets/planning.mp4" controls></video>
-        <div class="txt list">
-          <h4 class="header-list">Get Started in five simple steps:</h4>
-          <ol class="body-list">
-            <li class="item-list">
-              Choose a name for the ‘master’ player and hit create session.
-            </li>
-            <li class="item-list">
-              A session link will be generated, copy it and share it with the
-              rest of the attendees.
-            </li>
-            <li class="item-list">
-              Create your story and hit the start voting button.
-            </li>
-            <li class="item-list">Attendees will emit their votes.</li>
-            <li class="item-list">
-              Once all attendees have voted, click on finish voting and results
-              will be shown... Create a new story to start the voting process
-              again.
-            </li>
-          </ol>
+      </header>
+      <main>
+        <div class="component">
+          <h2 class="title">
+            T-Shirt Planning Poker is a free online tool. <br />How does it
+            work?
+          </h2>
         </div>
-      </div>
-      <div class="component">
-        <button class="button" onclick="location.href='app.html'" type="button">
-          get started
-        </button>
-      </div>
+        <div class="component video-container">
+          <video class="video" src="./assets/planning.mp4" controls></video>
+          <div class="txt list">
+            <h3 class="header-list">Get Started in five simple steps:</h3>
+            <ol class="body-list">
+              <li class="item-list">
+                Choose a name for the ‘master’ player and hit create session.
+              </li>
+              <li class="item-list">
+                A session link will be generated, copy it and share it with the
+                rest of the attendees.
+              </li>
+              <li class="item-list">
+                Create your story and hit the start voting button.
+              </li>
+              <li class="item-list">Attendees will emit their votes.</li>
+              <li class="item-list">
+                Once all attendees have voted, click on finish voting and
+                results will be shown... Create a new story to start the voting
+                process again.
+              </li>
+            </ol>
+          </div>
+        </div>
+        <div class="component">
+          <button
+            class="button"
+            onclick="location.href='app.html'"
+            type="button"
+          >
+            get started
+          </button>
+        </div>
+      </main>
     </div>
     <footer class="footer">
       <a class="imgFooter" href="https://lemoncode.net/" target="blank">
